--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -1,1 +1,470 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Pressure Washing Carcroft - Driveway, Patio & Exterior Cleaning Services</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
+<meta name="description" content="Professional pressure washing in Carcroft for driveways, patios, roofs and exteriors. Reliable local service delivering powerful cleaning and long-lasting results.">
+
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get a Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Pressure Washing Carcroft</h1>
+<p>Our pressure washing service in Carcroft is designed to restore the appearance of your property quickly and effectively. Over time, outdoor surfaces collect dirt, algae, moss, oil stains and traffic marks that make them look tired and neglected. Using professional-grade pressure washing equipment, we remove deep-set grime from driveways, patios, paths, walls and decking without damaging the surface underneath. Each job is assessed carefully so the correct pressure and cleaning method is used for your specific material, whether it is block paving, concrete, tarmac or natural stone. Pressure washing not only improves how your property looks, it also makes areas safer by removing slippery growth and built-up residue. For homeowners and businesses in Carcroft, our service offers a fast, affordable way to refresh outdoor spaces and protect their surfaces from long-term damage. We take pride in delivering clean results, friendly service and lasting value.</p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Pressure Washing Driveways</h2>
+<p>Pressure washing driveways is one of the most effective ways to restore the look of your property’s exterior. Over time, driveways become covered in dirt, algae, moss, oil stains and tyre marks that make them look worn and untidy. Professional pressure washing removes these deep-set contaminants using powerful equipment that lifts grime without damaging the surface. Whether your driveway is block paving, concrete, tarmac or natural stone, the correct pressure and cleaning method is used to achieve the best results. Cleaning your driveway not only improves its appearance but also makes it safer by removing slippery growth that can cause accidents. Regular pressure washing also helps protect the surface, preventing long-term staining and reducing the risk of cracks caused by trapped dirt and moisture. A freshly cleaned driveway instantly boosts kerb appeal, making your home or business look well cared for and inviting.</p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Pressure Cleaning Walls</h2>
+<p>Pressure cleaning walls is an excellent way to restore the fresh, clean look of any property. Over time, exterior walls collect layers of dirt, traffic pollution, algae, moss, and weather staining that can make even well-kept buildings look dull and uncared for. Professional pressure cleaning uses powerful equipment combined with the correct techniques to lift deep-set grime without damaging brickwork, render, stone, or cladding. Every surface is assessed first so the pressure level and cleaning method are matched to the material, ensuring safe and effective results. Cleaning walls not only improves appearance but also helps protect the structure by removing harmful growth that can trap moisture and slowly break down surfaces. Regular wall cleaning can prevent permanent staining, reduce maintenance costs, and extend the life of exterior finishes. It also makes properties safer and healthier by removing mould and algae that can affect air quality around entrances and windows. A freshly cleaned wall instantly improves kerb appeal, making homes more welcoming and businesses more professional. For property owners in Carcroft, pressure cleaning is a simple way to refresh tired exteriors and maintain long-term value. Whether it is a house, shop, office, or industrial unit, clean walls make a strong first impression and show that a property is well cared for. With the right equipment, experience, and attention to detail, pressure cleaning delivers reliable results that transform the look and feel of any building exterior.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="Pressure cleaning exterior wall in Carcroft removing dirt, algae and weather stains from brickwork"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Jet Cleaning Decking</h2>
+<p>Pressure washing decking is one of the best ways to bring tired outdoor spaces back to life. Over time, decking becomes covered in dirt, algae, moss and food or drink spills that make it look dull and slippery. Professional pressure washing removes these layers safely, revealing the natural colour and texture of the wood or composite boards underneath. The correct pressure is used to avoid damage while still lifting deep-set grime from between the boards. Cleaning your decking not only improves its appearance but also makes it safer by reducing the risk of slips and falls. Regular washing helps extend the life of the decking by preventing rot, staining and surface breakdown caused by trapped dirt and moisture. For homeowners in Carcroft, pressure washing is a quick and affordable way to refresh garden areas and create a clean, inviting space for relaxing and entertaining.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Pressure washing wooden decking in Carcroft to remove dirt, moss, and algae."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Full Range of Pressure Washing Services</h2>
+<p>Pressure washing is a fast and effective way to remove dirt, grime, algae, and stains from outdoor surfaces. It instantly improves appearance, makes areas safer to walk on, and helps protect surfaces from long-term damage caused by trapped dirt and moisture. Our service includes.</p>
+<ul style="text-align: left;">
+<li>Driveways</li>
+<li>Patios</li>
+<li>Decking</li>
+<li>Paths and walkways</li>
+<li>Brick walls</li>
+<li>Rendered walls</li>
+<li>Fences</li>
+<li>Gates</li>
+<li>Garden walls</li>
+<li>Roof tiles</li>
+<li>Gutters and facias</li>
+<li>Soffits</li>
+<li>Conservatory roofs</li>
+<li>Cladding</li>
+<li>Garage doors</li>
+<li>Garden Furniture</li>
+<li>Steps and stairways</li>
+<li>Balconies</li>
+<li>Car parks</li>
+<li>Play areas and courts</li> 
+</ul>
+<img src="/images/pressure-washing-algae.webp"
+alt="Pressure washing service including driveways, patios, decking, walls, roofs, gutters, cladding, fences and commercial exteriors"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ FAQ SECTION -->
+<section style="max-width:900px; margin:40px auto; padding:0 15px;">
+
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
+
+<div>
+<p><strong>How much does pressure washing cost?</strong><br>
+Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins.</p>
+
+<p><strong>Will pressure washing damage my surfaces?</strong><br>
+No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage.</p>
+
+<p><strong>Do you use your own water and electricity?</strong><br>
+We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options.</p>
+
+<p><strong>Do I need to prepare anything before you arrive?</strong><br>
+We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely.</p>
+
+<p><strong>How often should my driveway or patio be cleaned?</strong><br>
+Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning.</p>
+
+<p><strong>Can you remove oil, rust, and heavy stains?</strong><br>
+Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing.</p>
+
+<p><strong>Is pressure washing safe for pets and plants?</strong><br>
+Yes. We take care around gardens and can use eco-friendly products when needed.</p>
+
+<p><strong>How long before I can use the area again?</strong><br>
+Most surfaces can be walked on after 1–2 hours once they are dry.</p>
+
+<p><strong>Do you clean commercial properties as well as homes?</strong><br>
+Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings.</p>
+
+<p><strong>What if I’m not happy with the result?</strong><br>
+Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue.</p>
+
+<p><strong>Do you offer sealing after cleaning?</strong><br>
+Yes. We can apply protective sealants to help prevent weeds, stains, and water damage.</p>
+
+<p><strong>Are you insured to work on my property?><p><strong>
+Yes. We are fully insured, giving you peace of mind while we work.</p>
+</div>
+
+</section>
+
+
+<!-- Close -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Ready to Refresh Your Property?</h2>
+<p>After reviewing our services and FAQs, you can see how professional pressure washing improves appearance, safety, and value. Whether it’s a driveway, patio, decking, or full exterior, we’re ready to help. Contact us today for a free quote and let us bring your outdoor spaces back to life with reliable, high-quality cleaning.</p>
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+
+ <!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+document.getElementById("lightbox").style.display="flex";
+document.getElementById("lightboxImg").src=src;
+}
+function closeLightbox(){
+document.getElementById("lightbox").style.display="none";
+}
+</script>
+
+<!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "How much does pressure washing cost?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins."
+}
+},
+{
+"@type": "Question",
+"name": "Will pressure washing damage my surfaces?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage."
+}
+},
+{
+"@type": "Question",
+"name": "Do you use your own water and electricity?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options."
+}
+},
+{
+"@type": "Question",
+"name": "Do I need to prepare anything before you arrive?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely."
+}
+},
+{
+"@type": "Question",
+"name": "How often should my driveway or patio be cleaned?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning."
+}
+},
+{
+"@type": "Question",
+"name": "Can you remove oil, rust, and heavy stains?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing safe for pets and plants?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We take care around gardens and can use eco-friendly products when needed."
+}
+},
+{
+"@type": "Question",
+"name": "How long before I can use the area again?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most surfaces can be walked on after 1–2 hours once they are dry."
+}
+},
+{
+"@type": "Question",
+"name": "Do you clean commercial properties as well as homes?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings."
+}
+},
+{
+"@type": "Question",
+"name": "What if I’m not happy with the result?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer sealing after cleaning?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We can apply protective sealants to help prevent weeds, stains, and water damage."
+}
+},
+{
+"@type": "Question",
+"name": "Are you insured to work on my property?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We are fully insured, giving you peace of mind while we work."
+}
+}
+]
+}
+</script>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-carcroft.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.583,
+"longitude": -1.186
+},
+"areaServed": "Carcroft",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
