--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title>Pressure Washing Carcroft - Driveway, Patio & Exterior Cleaning Services</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-arksey.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
 <meta name="description" content="Professional pressure washing in Carcroft for driveways, patios, roofs and exteriors. Reliable local service delivering powerful cleaning and long-lasting results.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
@@ -243,7 +243,7 @@ Customer satisfaction is important to us. If you are not happy, contact us and w
 <p><strong>Do you offer sealing after cleaning?</strong><br>
 Yes. We can apply protective sealants to help prevent weeds, stains, and water damage.</p>
 
-<p><strong>Are you insured to work on my property?><p><strong>
+<p><strong>Are you insured to work on my property?<p><strong>
 Yes. We are fully insured, giving you peace of mind while we work.</p>
 </div>
 
@@ -260,12 +260,6 @@ Yes. We are fully insured, giving you peace of mind while we work.</p>
 <div style="text-align:center; margin:40px 0;">
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </div>
-
-<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
-<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
-<img id="lightboxImg" src="" alt="">
-</div>
-
 
 </main>
 
@@ -290,103 +284,103 @@ document.getElementById("lightbox").style.display="none";
 <!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
 <script type="application/ld+json">
 {
-@context: "https://schema.org",
-@type: "FAQPage",
-mainEntity: [
+"@context: "https://schema.org",
+"@type: "FAQPage",
+"mainEntity: [
 {
-@type: "Question",
-name: "How much does pressure washing cost?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins."
+"@type: "Question",
+"name: "How much does pressure washing cost?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins."
 }
 },
 {
-@type: "Question",
-name: "Will pressure washing damage my surfaces?",
-acceptedAnswer: {
-@type: "Answer",
-text: "No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage."
+"@type: "Question",
+"name: "Will pressure washing damage my surfaces?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage."
 }
 },
 {
-@type: "Question",
-name: "Do you use your own water and electricity?",
-acceptedAnswer: {
-@type: "Answer",
-text: "We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options."
+"@type: "Question",
+"name: "Do you use your own water and electricity?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options."
 }
 },
 {
-@type: "Question",
-name: "Do I need to prepare anything before you arrive?",
-acceptedAnswer: {
-@type: "Answer",
-text: "We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely."
+"@type: "Question",
+"name: "Do I need to prepare anything before you arrive?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely."
 }
 },
 {
-@type: "Question",
-name: "How often should my driveway or patio be cleaned?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning."
+"@type: "Question",
+"name: "How often should my driveway or patio be cleaned?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning."
 }
 },
 {
-@type: "Question",
-name: "Can you remove oil, rust, and heavy stains?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing."
+"@type: "Question",
+"name: "Can you remove oil, rust, and heavy stains?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing."
 }
 },
 {
-@type: "Question",
-name: "Is pressure washing safe for pets and plants?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Yes. We take care around gardens and can use eco-friendly products when needed."
+"@type: "Question",
+"name: "Is pressure washing safe for pets and plants?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Yes. We take care around gardens and can use eco-friendly products when needed."
 }
 },
 {
-@type: "Question",
-name: "How long before I can use the area again?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Most surfaces can be walked on after 1–2 hours once they are dry."
+"@type: "Question",
+"name: "How long before I can use the area again?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Most surfaces can be walked on after 1–2 hours once they are dry."
 }
 },
 {
-@type: "Question",
-name: "Do you clean commercial properties as well as homes?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings."
+"@type: "Question",
+"name: "Do you clean commercial properties as well as homes?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings."
 }
 },
 {
-@type: "Question",
-name: "What if I’m not happy with the result?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue."
+"@type: "Question",
+"name: "What if I’m not happy with the result?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue."
 }
 },
 {
-@type: "Question",
-name: "Do you offer sealing after cleaning?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Yes. We can apply protective sealants to help prevent weeds, stains, and water damage."
+"@type: "Question",
+"name: "Do you offer sealing after cleaning?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Yes. We can apply protective sealants to help prevent weeds, stains, and water damage."
 }
 },
 {
-@type: "Question",
-name: "Are you insured to work on my property?",
-acceptedAnswer: {
-@type: "Answer",
-text: "Yes. We are fully insured, giving you peace of mind while we work."
+"@type: "Question",
+"name: "Are you insured to work on my property?",
+"acceptedAnswer: {
+"@type: "Answer",
+"text: "Yes. We are fully insured, giving you peace of mind while we work."
 }
 }
 ]
@@ -395,39 +389,48 @@ text: "Yes. We are fully insured, giving you peace of mind while we work."
 
 <script type="application/ld+json">
 {
-@context: "https://schema.org",
-@type: "LocalBusiness",
-name: "Home Repairs 4U",
-image: "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-url: "https://homerepairs4u.com/local/pressure-washing-carcroft.html",
-telephone: "+44-07735-873694",
-priceRange: "££",
-address: {
-@type: "PostalAddress",
-streetAddress: "35 Airstone Road",
-addressLocality: "Askern",
-addressRegion: "Doncaster",
-postalCode: "DN6 0QA",
-addressCountry: "GB"
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-carcroft.html",
+"telephone": "+44-7735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
 },
-geo: {
-@type: "GeoCoordinates",
-latitude: 53.583,
-longitude: -1.186
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.583,
+"longitude": -1.186
 },
-areaServed: "Carcroft",
-openingHoursSpecification: [
+"areaServed": {
+"@type": "Place",
+"name": "Carcroft"
+},
+"openingHoursSpecification": [
 {
-@type: "OpeningHoursSpecification",
-dayOfWeek: [
-Monday,"Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday",
+"Tuesday",
+"Wednesday",
+"Thursday",
+"Friday",
+"Saturday",
+"Sunday"
 ],
-opens: "00:00",
-closes: "23:59"
+"opens": "00:00",
+"closes": "23:59"
 }
 ],
-sameAs: [
-https://www.facebook.com/profile.php?id=61584395621256
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
 ]
 }
 </script>
