--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -395,7 +395,7 @@
             "
         }
         }, {
-            "@type: "
+            "@type: "FAQPage"
             Question ",
             "name: "
             What
