--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -215,20 +215,20 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Skellow</h2>
 
 <div>
-<p><strong>What affects the cost of pressure washing?</strong><br>
-Pricing depends on factors such as surface size, material type, and the level of dirt or staining present. We provide free quotes so you know the full cost before work begins.</p>
+<p><strong></strong><br>
+</p>
 
-<p><strong>Is pressure washing suitable for all surfaces?</strong><br>
-Yes, when carried out correctly. We adjust pressure levels and cleaning methods to suit each surface, ensuring safe and effective results.</p>
+<p><strong></strong><br>
+</p>
 
 <p><strong>Do I need to be at home during the cleaning?</strong><br>
-Not necessarily. As long as we have access to the areas being cleaned and a water supply, work can usually be completed without you being present</p>
+</p>
 
 <p><strong>How often should exterior surfaces be cleaned?</strong><br>
-Most homes benefit from pressure washing once per year, although shaded or high-traffic areas may require more frequent cleaning.</p>
+</p>
 
 <p><strong>Can you deal with oil stains and heavy discolouration?</strong><br>
-Many stubborn stains can be significantly reduced or fully removed using specialist treatments alongside pressure washing.</p>
+</p>
 
 </section>
 
