--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Pressure Washing Arskey - Driveway, Patio & Exterior Cleaning Services</title>
+<title>Pressure Washing Arskey - Driveway, Patio & Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-arksey.html">
 <meta name="description" content="Local pressure washing services in Arksey. Driveways, patios, decking, walls and exterior cleaning carried out safely with professional results.">
