--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -9,7 +9,7 @@
 <title>Pressure Washing Arskey - Driveway, Patio & Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-arksey.html">
-<meta name="description" content="Local pressure washing services in Arksey. Driveways, patios, decking, walls and exterior cleaning carried out safely with professional results.">
+<meta name="description" content="Professional pressure washing in Arksey – get your property sparkling clean! Instant online quote available. Fast, reliable, and affordable service.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
